<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CuidaApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	
     <string name="error_title">¡Hubo un inconveniente!</string>
    <string name="error_acept">¡De acuerdo!</string>
    <string name="error_global">Por favor inténtelo nuevamente más tarde.</string>
    <string name="error_no_assets">No existen activos de ésta categoría, cerca de ti</string>
     <string name="information_title">Información</string>
     <string name="wait_message">Espere un momento por favor...</string>
     <string name="error_invalid_email">Su dirección de correo electrónico ingresado no cumple con un formato valido</string>
     <string name="error_email_required">Ingrese su dirección de correo electrónico</string>
     <string name="error_password_required">Ingrese su contraseña</string>
     <string name="error_invalid_password">Su contraseña es muy corta, debe contener mínimo 6 carácteres</string>
     <string name="error_last_name_requerired">Ingrese su apellido</string>
     <string name="error_invalid_password_actual">Su contraseña actual es muy corta, debe contener mínimo 6 carácteres</string>
     <string name="error_password_new_required">Ingrese su nueva contraseña</string>
     <string name="error_password_actual_required">Ingrese su contraseña actual</string>
     
     
      <!-- Dialog INTERNET -->
    <string name="dialog_no_internet_title">¡Error de red!</string>
    <string name="dialog_no_internet_content">No fué posible enviar el reporte. Por favor verifique su conexión a internet e inténtelo nuevamente.</string>
    <string name="dialog_no_internet_btn_again">Reintentar</string>
    <string name="dialog_no_internet_btn_cancel">Cancelar</string>
    <string name="dialog_no_internet_error_status_false_send_event">Ocurrio un error a intentar enviar el reporte al servidor\nPor favor intente más tarde.</string>
     
    
    
    <!-- Messages Hint -->
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_username"> Nombre </string>
    <string name="hint_userlastname"> Apellido </string>
    <string name="hint_repeat_password"> Repetir contraseña </string>
    <string name="hint_new_password"> Nueva contraseña </string>
    
    <string name="error_name_requerired">Ingrese su nombre</string>
    <string name="error_password_distint">Las contraseñas no coinciden</string>
    <string name="error_code_required">Ingrese su código de seguridad</string>
    <string name="error_code_invalid">Ingrese su código de seguridad correctamente</string>
    
        <string name="app_description">This is a sample application for the Android Training class
        &quot;Displaying Bitmaps Efficiently&quot;
        (http://developer.android.com/training/displaying-bitmaps/display-bitmap.html). It is not
        designed to be a full reference application but to demonstrate the concepts discussed in
        training course.</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    
    <string name="dialog_no_gps_title">El GPS está desactivado.</string>
    <string name="dialog_no_gps_content">¿Mostra configuración de ubicación? </string>
    <string name="dialog_no_found_location_gps">No se ha encontrado su ubicación...intente nuevamente</string>
    <string name="dialog_no_gps_acept">Aceptar</string>
    <string name="dialog_no_gps_cancel">Cancelar</string>
    <string name="selected_active">Toca cualquier activo para continuar</string>
    <string name="tittle_detail_active">Detalles Activo</string>
    <string name="btn_delete_active">Eliminar activo</string>
    <string name="btn_back">Regresar</string>
    
    <string name="info_gps">Para ver los\nbienes disponibles\nen tu ciudad,\n activa tu GPS.</string>
    
    <string name="btn_on_gps">Encender GPS.</string>
</resources>